# loquivox

./: CLAUDE.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: release.yml
docs/: index.html
packaging/: README.md
packaging/deb/: build-deb.sh
src/linuxwhisper/: api.py  config.py  config_io.py  state.py
src/linuxwhisper/handlers/: keyboard.py  mode.py
src/linuxwhisper/managers/: overlay.py
src/linuxwhisper/platform/: wayland.py
src/linuxwhisper/services/: ai.py  audio.py  clipboard.py  postprocess.py  tts.py
src/linuxwhisper/transcription/: __init__.py  base.py  deepgram_backend.py  dispatcher.py  factory.py  groq_backend.py  openai_realtime_backend.py  streaming.py  util.py  whispercpp_backend.py
src/linuxwhisper/ui/: recording_overlay.py  settings_dialog.py  tray.py
src/loquivox/: __init__.py  app.py  config.py  state.py
src/loquivox/handlers/: keyboard.py  mode.py
src/loquivox/managers/: chat.py  overlay.py
src/loquivox/services/: audio.py  postprocess.py
src/loquivox/ui/: chat_overlay.py  recording_overlay.py  settings_dialog.py  tray.py
