[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loquivox"
version = "1.1.1"
description = "A Voice-Assistant & AI Companion for Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Dianjeol" },
]

dependencies = [
    "sounddevice",
    "numpy<2",
    "scipy",
    "groq",
    "evdev",
    "pygobject",
    "pycairo",
    "tomlkit",
]

[project.optional-dependencies]
# Local offline transcription uses the standalone whisper.cpp `whisper-cli`
# binary (bundled by the packaging recipes), not a Python binding — so it
# needs no optional Python dependency here.
# Streaming live transcription backends.
openai = ["openai>=2"]
deepgram = ["deepgram-sdk>=7"]

[project.scripts]
loquivox = "loquivox.app:main"

[tool.setuptools.packages.find]
where = ["src"]
